// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiSelect /> matches snapshot 1`] = `
<div>
  <div
    class=" css-1k3ogbi-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-multiSelectContainer-multiSelectContainer"
  >
    <label
      class="css-xs6o3g-label-label"
      for="downshift-6-toggle-button"
      id="testMultiSelect"
    >
      Test Multi-select
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-6-label downshift-6-toggle-button"
      class="select-btn"
      id="downshift-6-toggle-button"
      type="button"
    >
      Test placeholder
      <svg-file-stub
        height="24"
      />
    </button>
    <ul
      aria-labelledby="downshift-6-label"
      data-testid="list-container"
      id="downshift-6-menu"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="content"
      >
        <span
          class="css-26eo9i-textContainer-textContainer"
          data-testid="text-component"
        >
           Select one or more items
        </span>
        <button
          class="close-btn"
          data-testid="close-btn"
        >
          <svg-file-stub
            height="20"
          />
        </button>
      </div>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-6-item-0"
            name="sapiente"
            role="option"
            type="checkbox"
            value="Inc"
          />
          <label
            for="downshift-6-item-0"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            Rosenbaum and Sons
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-6-item-1"
            name="nobis"
            role="option"
            type="checkbox"
            value="Sleek"
          />
          <label
            for="downshift-6-item-1"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            Clothing
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-6-item-2"
            name="ratione"
            role="option"
            type="checkbox"
            value="1e610c4bac5597f4ac9da55fa35f08f416a60258"
          />
          <label
            for="downshift-6-item-2"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            index solid state feed
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-6-item-3"
            name="non"
            role="option"
            type="checkbox"
            value="AGP"
          />
          <label
            for="downshift-6-item-3"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            We need to index the auxiliary FTP hard drive!
          </label>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<MultiSelect /> matches snapshot with \`block = true\` 1`] = `
<div>
  <div
    class=" css-hxre5e-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-multiSelectContainer-multiSelectContainer"
  >
    <label
      class="css-xs6o3g-label-label"
      for="downshift-7-toggle-button"
      id="testMultiSelect"
    >
      Test Multi-select
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-7-label downshift-7-toggle-button"
      class="select-btn"
      id="downshift-7-toggle-button"
      type="button"
    >
      Test placeholder
      <svg-file-stub
        height="24"
      />
    </button>
    <ul
      aria-labelledby="downshift-7-label"
      data-testid="list-container"
      id="downshift-7-menu"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="content"
      >
        <span
          class="css-26eo9i-textContainer-textContainer"
          data-testid="text-component"
        >
           Select one or more items
        </span>
        <button
          class="close-btn"
          data-testid="close-btn"
        >
          <svg-file-stub
            height="20"
          />
        </button>
      </div>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-7-item-0"
            name="sapiente"
            role="option"
            type="checkbox"
            value="Inc"
          />
          <label
            for="downshift-7-item-0"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            Rosenbaum and Sons
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-7-item-1"
            name="nobis"
            role="option"
            type="checkbox"
            value="Sleek"
          />
          <label
            for="downshift-7-item-1"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            Clothing
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-7-item-2"
            name="ratione"
            role="option"
            type="checkbox"
            value="1e610c4bac5597f4ac9da55fa35f08f416a60258"
          />
          <label
            for="downshift-7-item-2"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            index solid state feed
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-7-item-3"
            name="non"
            role="option"
            type="checkbox"
            value="AGP"
          />
          <label
            for="downshift-7-item-3"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            We need to index the auxiliary FTP hard drive!
          </label>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<MultiSelect /> matches snapshot with \`inline = true\` 1`] = `
<div>
  <div
    class="inline css-1k3ogbi-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-multiSelectContainer-multiSelectContainer"
  >
    <label
      class="css-xs6o3g-label-label"
      for="downshift-8-toggle-button"
      id="testMultiSelect"
    >
      Test Multi-select
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-8-label downshift-8-toggle-button"
      class="select-btn"
      id="downshift-8-toggle-button"
      type="button"
    >
      Test placeholder
      <svg-file-stub
        height="24"
      />
    </button>
    <ul
      aria-labelledby="downshift-8-label"
      data-testid="list-container"
      id="downshift-8-menu"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="content"
      >
        <span
          class="css-26eo9i-textContainer-textContainer"
          data-testid="text-component"
        >
           Select one or more items
        </span>
        <button
          class="close-btn"
          data-testid="close-btn"
        >
          <svg-file-stub
            height="20"
          />
        </button>
      </div>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-8-item-0"
            name="sapiente"
            role="option"
            type="checkbox"
            value="Inc"
          />
          <label
            for="downshift-8-item-0"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            Rosenbaum and Sons
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-8-item-1"
            name="nobis"
            role="option"
            type="checkbox"
            value="Sleek"
          />
          <label
            for="downshift-8-item-1"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            Clothing
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-8-item-2"
            name="ratione"
            role="option"
            type="checkbox"
            value="1e610c4bac5597f4ac9da55fa35f08f416a60258"
          />
          <label
            for="downshift-8-item-2"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            index solid state feed
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-8-item-3"
            name="non"
            role="option"
            type="checkbox"
            value="AGP"
          />
          <label
            for="downshift-8-item-3"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            We need to index the auxiliary FTP hard drive!
          </label>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
